--- a/templates/city/index.html.twig
+++ b/templates/city/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}City index{% endblock %}
+{% block title %}Villes{% endblock %}
 
 {% block body %}
     <div class="container">
-    <h1>City index</h1>
+    <h1>Villes</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>ShippingCost</th>
+                <th>Nom de ville</th>
+                <th>frais d'expédition</th>
                 <th>actions</th>
             </tr>
         </thead>
