--- a/templates/city/new.html.twig
+++ b/templates/city/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New City{% endblock %}
+{% block title %}Créer nouvelle ville{% endblock %}
 
 {% block body %}
     <div class="container">
